sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value gatValeur
    while (gatValeur(j)>v){
           ^